@@ -2,15 +2,39 @@ package primitives;
 
 import java.util.Objects;
 
+/**
+ *
+ */
 public class Ray {
     private Point p0;
     private Vector dir;
 
+    /**
+     *
+     * @param p0
+     * @param dir
+     */
     public Ray(Point p0, Vector dir) {
         this.p0 = p0;
         if (dir.length() != 1)
             dir.normalize();
         this.dir = dir;
+    }
+
+    /**
+     *
+     * @return
+     */
+    public Point getP0() {
+        return new Point(p0.xyz.d1,p0.xyz.d2,p0.xyz.d3);
+    }
+
+    /**
+     *
+     * @return
+     */
+    public Vector getDir() {
+        return new Vector(dir.xyz.d1,dir.xyz.d2,dir.xyz.d3);
     }
 
     @Override
@@ -24,7 +48,7 @@ public class Ray {
     @Override
     public String toString() {
         return "Ray: " +
-                "point: ({},{},{})".formatted(this.p0.xyz.d1,this.p0.xyz.d2,this.p0.xyz.d3) +
-                "dir: ({},{},{})".formatted(this.dir.xyz.d1,this.dir.xyz.d2,this.dir.xyz.d3);
+                String.format("point: (%.2f,%.2f,%.2f)",this.p0.xyz.d1,this.p0.xyz.d2,this.p0.xyz.d3) +
+                String.format("dir: (%.2f,%.2f,%.2f)",this.dir.xyz.d1,this.dir.xyz.d2,this.dir.xyz.d3);
     }
 }
